--- a/bestmedia.html
+++ b/bestmedia.html
@@ -28,7 +28,23 @@
       font-size: 2rem;
       flex-wrap: wrap;
     }
-
+        
+    .hamburger {
+      display: none;
+      flex-direction: column;
+      justify-content: center;
+      cursor: pointer;
+      width: 30px;
+      height: 25px;
+      gap: 5px;
+    }
+    .hamburger div {
+      background: #0f0f1c;
+      height: 4px;
+      width: 100%;
+      border-radius: 2px;
+  }
+    
     .logo-title {
       display: flex;
       align-items: center;
