--- a/staffpicks.html
+++ b/staffpicks.html
@@ -24,6 +24,7 @@
       padding: 1rem 2rem;
       font-size: 2rem;
       flex-wrap: wrap;
+      position: relative;
     }
     .logo-title {
       display: flex;
@@ -36,6 +37,21 @@
       height: 60px;
       width: auto;
     }
+    .hamburger {
+      display: none;
+      flex-direction: column;
+      justify-content: center;
+      cursor: pointer;
+      width: 30px;
+      height: 25px;
+      gap: 5px;
+    }
+    .hamburger div {
+      background: #0f0f1c;
+      height: 4px;
+      width: 100%;
+      border-radius: 2px;
+    }
     .site-nav {
       display: flex;
       gap: 2rem;
@@ -46,6 +62,7 @@
       text-decoration: none;
       font-weight: bold;
     }
+
     .content {
       max-width: 1200px;
       margin: 2rem auto;
@@ -146,6 +163,30 @@
     .story-card:hover .card-overlay {
       opacity: 1;
     }
+
+    @media (max-width: 768px) {
+      .hamburger {
+        display: flex;
+      }
+      .site-nav {
+        display: none;
+        flex-direction: column;
+        width: 100%;
+        background-color: #0df6e3;
+        padding: 1rem 2rem;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        z-index: 999;
+      }
+      .site-nav.show {
+        display: flex;
+      }
+      .site-nav a {
+        color: #0f0f1c;
+        padding: 0.5rem 0;
+      }
+    }
   </style>
 </head>
 <body>
@@ -154,7 +195,12 @@
       <img src="Flame logo-1.png.png" alt="Burnline logo">
       <span>BURNLINE</span>
     </a>
-    <nav class="site-nav">
+    <div class="hamburger" id="hamburger">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <nav class="site-nav" id="site-nav">
       <a href="fiction.html">Fiction</a>
       <a href="art.html">Art</a>
       <a href="about.html">About</a>
@@ -386,6 +432,14 @@
         const category = button.getAttribute('data-filter');
         filterCategory(category);
       });
+    });
+
+    // Hamburger menu toggle
+    const hamburger = document.getElementById('hamburger');
+    const nav = document.getElementById('site-nav');
+
+    hamburger.addEventListener('click', () => {
+      nav.classList.toggle('show');
     });
   </script>
 </body>
