--- a/protohome.html
+++ b/protohome.html
@@ -264,17 +264,22 @@
     </nav>
   </header>
 
-  <section class="hero">
-    <div class="hero-text">
-      <h1 class="gradient-heading">The Latest Issue</h1>
-      <p>Fiction from console cowboys and renegade minds. Themes this month: live, laugh, love (but darker).</p>
-      <p>Also: spreads from artistpoop and farthouse. Essays, if we remember to add them.</p>
-    </div>
-    <img src="Asimov Test Cover.jpg" alt="Latest issue cover">
+<section class="hero">
+  <img src="Asimov Test Cover.jpg" alt="Latest issue cover">
+  <div class="hero-text">
+    <h1 class="gradient-heading">Issue 07 – August 2025</h1>
+    <ul style="list-style: none; padding: 0; margin-top: 1.5rem;">
+      <li><strong>"Neon Ashes"</strong> by J. M. Caldwell</li>
+      <li><strong>"Chrome Dreams"</strong> by Riko Ahn</li>
+      <li><strong>"The Memory Blackout"</strong> by Dex Silva</li>
+      <li><strong>"Smog Season"</strong> by Aliya Zhang</li>
+      <li><strong>"Datalace"</strong> by T.J. Krow</li>
+    </ul>
     <div class="hero-button-container">
       <button id="toggle-flipbook" class="read-issue-btn">Read This Issue</button>
     </div>
-  </section>
+  </div>
+</section>
 
   <section id="latest-issue" style="padding: 4rem 2rem; text-align: center; display: none;">
     <iframe allowfullscreen="allowfullscreen" allow="clipboard-write" scrolling="no" class="fp-iframe" src="https://heyzine.com/flip-book/055f81b30b.html" style="border: 1px solid lightgray; width: 100%; max-width: 900px; height: 600px; margin: 0 auto; display: block;"></iframe>
@@ -290,21 +295,18 @@
       <div class="card">
         <img src="AL Cover.png" alt="Featured Stories image">
         <h3>Featured Stories</h3>
-        <p>High-voltage fiction from the neon edge. Our boldest, weirdest tales.</p>
       </div>
     </a>
     <a href="bestmedia.html" class="card-link">
       <div class="card">
         <img src="NM Art.png" alt="Poll image">
-        <h3>Poll: Best Cyberpunk Media</h3>
-        <p>The genre's defining films, books, and games — ranked by you.</p>
+        <h3>Cyberpunk Media Ranked</h3>
       </div>
     </a>
     <a href="staffpicks.html" class="card-link">
       <div class="card">
         <img src="CS2 Keyart.jpg" alt="Staff Picks image">
         <h3>Staff Picks</h3>
-        <p>Weird and wired media we keep coming back to.</p>
       </div>
     </a>
   </section>
@@ -313,7 +315,7 @@
     <div class="footer-container">
       <div class="footer-column">
         <img src="Flame logo-1.png.png" alt="Burnline Logo" class="footer-logo">
-        <p>Get stories, art, and neon-lit updates from Burnline.</p>
+        <p>Get stories, art, and updates from Burnline straigt to your inbox.</p>
         <form style="margin-top: 1rem;">
           <input type="email" placeholder="Email Address" class="newsletter-input"><br>
           <button type="submit" class="newsletter-button">Subscribe</button>
