--- a/protohome.html
+++ b/protohome.html
@@ -268,13 +268,23 @@
   <img src="Asimov Test Cover.jpg" alt="Latest issue cover">
   <div class="hero-text">
     <h1 class="gradient-heading">Issue 07 – August 2025</h1>
-    <ul style="list-style: none; padding: 0; margin-top: 1.5rem;">
-      <li><strong>"Neon Ashes"</strong> by J. M. Caldwell</li>
-      <li><strong>"Chrome Dreams"</strong> by Riko Ahn</li>
-      <li><strong>"The Memory Blackout"</strong> by Dex Silva</li>
-      <li><strong>"Smog Season"</strong> by Aliya Zhang</li>
-      <li><strong>"Datalace"</strong> by T.J. Krow</li>
+
+    <h3 style="margin-top: 2rem; margin-bottom: 1rem; font-size: 1.1rem; text-transform: uppercase; letter-spacing: 0.05em; color: #888;">Fiction</h3>
+    <ul style="list-style: none; padding: 0;">
+      <li style="margin-bottom: 0.75rem;"><strong>Neon Ashes</strong> by J. M. Caldwell</li>
+      <li style="margin-bottom: 0.75rem;"><strong>Chrome Dreams</strong> by Riko Ahn</li>
+      <li style="margin-bottom: 0.75rem;"><strong>The Memory Blackout</strong> by Dex Silva</li>
+      <li style="margin-bottom: 0.75rem;"><strong>Smog Season</strong> by Aliya Zhang</li>
+      <li style="margin-bottom: 0.75rem;"><strong>Datalace</strong> by T.J. Krow</li>
     </ul>
+
+    <h3 style="margin-top: 2rem; margin-bottom: 1rem; font-size: 1.1rem; text-transform: uppercase; letter-spacing: 0.05em; color: #888;">Artwork</h3>
+    <ul style="list-style: none; padding: 0;">
+      <li style="margin-bottom: 0.75rem;"><strong>Neural Bloom</strong> by Keira Vonn</li>
+      <li style="margin-bottom: 0.75rem;"><strong>Ghost Signal</strong> by M. Reyes</li>
+      <li style="margin-bottom: 0.75rem;"><strong>Synth Skin</strong> by ARTI.FX</li>
+    </ul>
+
     <div class="hero-button-container">
       <button id="toggle-flipbook" class="read-issue-btn">Read This Issue</button>
     </div>
