--- a/protohome.html
+++ b/protohome.html
@@ -264,10 +264,11 @@
     </nav>
   </header>
 
-<section class="hero">
-  <img src="Asimov Test Cover.jpg" alt="Latest issue cover">
-  <div class="hero-text">
-    <h1 class="gradient-heading">Issue 01 – October 2025</h1>
+<section class="hero" style="flex-direction: column; text-align: center;">
+  <img src="Asimov Test Cover.jpg" alt="Latest issue cover" style="max-width: 300px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.2); margin-bottom: 2rem;">
+  
+  <div class="hero-text" style="max-width: 600px; margin: 0 auto;">
+    <h1 class="gradient-heading">Issue 07 – August 2025</h1>
 
     <h3 style="margin-top: 2rem; margin-bottom: 1rem; font-size: 1.1rem; text-transform: uppercase; letter-spacing: 0.05em; color: #888;">Fiction</h3>
     <ul style="list-style: none; padding: 0;">
@@ -284,10 +285,10 @@
       <li style="margin-bottom: 0.75rem;"><strong>Ghost Signal</strong> by M. Reyes</li>
       <li style="margin-bottom: 0.75rem;"><strong>Synth Skin</strong> by ARTI.FX</li>
     </ul>
+  </div>
 
-    <div class="hero-button-container">
-      <button id="toggle-flipbook" class="read-issue-btn">Read This Issue</button>
-    </div>
+  <div style="margin-top: 2.5rem;">
+    <button id="toggle-flipbook" class="read-issue-btn">Read This Issue</button>
   </div>
 </section>
 
