--- a/protohome.html
+++ b/protohome.html
@@ -264,10 +264,8 @@
     </nav>
   </header>
 
-<section class="hero" style="flex-direction: column; text-align: center;">
-  <img src="Asimov Test Cover.jpg" alt="Latest issue cover" style="max-width: 300px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.2); margin-bottom: 2rem;">
-  
-  <div class="hero-text" style="max-width: 600px; margin: 0 auto;">
+<section class="hero">
+  <div class="hero-text">
     <h1 class="gradient-heading">Issue 07 – August 2025</h1>
 
     <h3 style="margin-top: 2rem; margin-bottom: 1rem; font-size: 1.1rem; text-transform: uppercase; letter-spacing: 0.05em; color: #888;">Fiction</h3>
@@ -287,10 +285,13 @@
     </ul>
   </div>
 
-  <div style="margin-top: 2.5rem;">
-    <button id="toggle-flipbook" class="read-issue-btn">Read This Issue</button>
-  </div>
+  <img src="Asimov Test Cover.jpg" alt="Latest issue cover" style="max-width: 300px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.2);" />
+
 </section>
+
+<div style="width: 100%; text-align: center; margin-top: 2.5rem; margin-bottom: 4rem;">
+  <button id="toggle-flipbook" class="read-issue-btn">Read This Issue</button>
+</div>
 
   <section id="latest-issue" style="padding: 4rem 2rem; text-align: center; display: none;">
     <iframe allowfullscreen="allowfullscreen" allow="clipboard-write" scrolling="no" class="fp-iframe" src="https://heyzine.com/flip-book/055f81b30b.html" style="border: 1px solid lightgray; width: 100%; max-width: 900px; height: 600px; margin: 0 auto; display: block;"></iframe>
