--- a/protohome.html
+++ b/protohome.html
@@ -267,10 +267,11 @@
 <section class="hero" style="flex-wrap: wrap; background: #ffffff;">
   <img src="Asimov Test Cover.jpg" alt="Latest issue cover" style="max-width: 300px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.2);" />
 
-  <div class="hero-text" style="max-width: 600px;">
-    <h1 class="gradient-heading">Issue 07 – August 2025</h1>
+<div class="hero-text" style="max-width: 1000px; display: flex; flex-direction: row; flex-wrap: wrap; gap: 4rem; margin-top: 2rem;">
 
-    <h3 style="margin-top: 2rem; margin-bottom: 1rem; font-size: 1.1rem; text-transform: uppercase; letter-spacing: 0.05em; color: #888;">Fiction</h3>
+  <!-- Fiction Column -->
+  <div style="flex: 1 1 300px; min-width: 280px;">
+    <h3 style="margin-bottom: 1rem; font-size: 1.1rem; text-transform: uppercase; letter-spacing: 0.05em; color: #888;">Fiction</h3>
     <ul style="list-style: none; padding: 0;">
       <li style="margin-bottom: 0.75rem;"><strong>Neon Ashes</strong> by J. M. Caldwell</li>
       <li style="margin-bottom: 0.75rem;"><strong>Chrome Dreams</strong> by Riko Ahn</li>
@@ -278,14 +279,19 @@
       <li style="margin-bottom: 0.75rem;"><strong>Smog Season</strong> by Aliya Zhang</li>
       <li style="margin-bottom: 0.75rem;"><strong>Datalace</strong> by T.J. Krow</li>
     </ul>
+  </div>
 
-    <h3 style="margin-top: 2rem; margin-bottom: 1rem; font-size: 1.1rem; text-transform: uppercase; letter-spacing: 0.05em; color: #888;">Artwork</h3>
+  <!-- Artwork Column -->
+  <div style="flex: 1 1 300px; min-width: 280px;">
+    <h3 style="margin-bottom: 1rem; font-size: 1.1rem; text-transform: uppercase; letter-spacing: 0.05em; color: #888;">Artwork</h3>
     <ul style="list-style: none; padding: 0;">
       <li style="margin-bottom: 0.75rem;"><strong>Neural Bloom</strong> by Keira Vonn</li>
       <li style="margin-bottom: 0.75rem;"><strong>Ghost Signal</strong> by M. Reyes</li>
       <li style="margin-bottom: 0.75rem;"><strong>Synth Skin</strong> by ARTI.FX</li>
     </ul>
   </div>
+
+</div>
 
   <div style="width: 100%; text-align: center; margin-top: 3rem;">
     <button id="toggle-flipbook" class="read-issue-btn">Read This Issue</button>
