--- a/protohome.html
+++ b/protohome.html
@@ -267,25 +267,34 @@
 <section class="hero" style="flex-wrap: wrap; background: #ffffff;">
   <img src="Asimov Test Cover.jpg" alt="Latest issue cover" style="max-width: 300px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.2);" />
 
-  <div class="hero-text" style="max-width: 600px;">
-    <h1 class="gradient-heading">Issue 07 – August 2025</h1>
+  <div class="hero-text" style="flex: 1; max-width: 700px; display: flex; flex-direction: column;">
 
-    <h3 style="margin-top: 2rem; margin-bottom: 1rem; font-size: 1.1rem; text-transform: uppercase; letter-spacing: 0.05em; color: #888;">Fiction</h3>
-    <ul style="list-style: none; padding: 0;">
-      <li style="margin-bottom: 0.75rem;"><strong>Neon Ashes</strong> by J. M. Caldwell</li>
-      <li style="margin-bottom: 0.75rem;"><strong>Chrome Dreams</strong> by Riko Ahn</li>
-      <li style="margin-bottom: 0.75rem;"><strong>The Memory Blackout</strong> by Dex Silva</li>
-      <li style="margin-bottom: 0.75rem;"><strong>Smog Season</strong> by Aliya Zhang</li>
-      <li style="margin-bottom: 0.75rem;"><strong>Datalace</strong> by T.J. Krow</li>
-    </ul>
+  <h1 class="gradient-heading">Issue 07 – August 2025</h1>
 
-    <h3 style="margin-top: 2rem; margin-bottom: 1rem; font-size: 1.1rem; text-transform: uppercase; letter-spacing: 0.05em; color: #888;">Artwork</h3>
-    <ul style="list-style: none; padding: 0;">
-      <li style="margin-bottom: 0.75rem;"><strong>Neural Bloom</strong> by Keira Vonn</li>
-      <li style="margin-bottom: 0.75rem;"><strong>Ghost Signal</strong> by M. Reyes</li>
-      <li style="margin-bottom: 0.75rem;"><strong>Synth Skin</strong> by ARTI.FX</li>
-    </ul>
+  <div style="display: flex; flex-wrap: wrap; gap: 2rem; margin-top: 2rem;">
+    <!-- Fiction Column -->
+    <div style="flex: 1 1 300px;">
+      <h3 style="margin-bottom: 1rem; font-size: 1.1rem; text-transform: uppercase; letter-spacing: 0.05em; color: #888;">Fiction</h3>
+      <ul style="list-style: none; padding: 0; margin: 0;">
+        <li style="margin-bottom: 0.75rem;"><strong>Neon Ashes</strong> by J. M. Caldwell</li>
+        <li style="margin-bottom: 0.75rem;"><strong>Chrome Dreams</strong> by Riko Ahn</li>
+        <li style="margin-bottom: 0.75rem;"><strong>The Memory Blackout</strong> by Dex Silva</li>
+        <li style="margin-bottom: 0.75rem;"><strong>Smog Season</strong> by Aliya Zhang</li>
+        <li style="margin-bottom: 0.75rem;"><strong>Datalace</strong> by T.J. Krow</li>
+      </ul>
+    </div>
+
+    <!-- Artwork Column -->
+    <div style="flex: 1 1 300px;">
+      <h3 style="margin-bottom: 1rem; font-size: 1.1rem; text-transform: uppercase; letter-spacing: 0.05em; color: #888;">Artwork</h3>
+      <ul style="list-style: none; padding: 0; margin: 0;">
+        <li style="margin-bottom: 0.75rem;"><strong>Neural Bloom</strong> by Keira Vonn</li>
+        <li style="margin-bottom: 0.75rem;"><strong>Ghost Signal</strong> by M. Reyes</li>
+        <li style="margin-bottom: 0.75rem;"><strong>Synth Skin</strong> by ARTI.FX</li>
+      </ul>
+    </div>
   </div>
+</div>
 
   <div style="width: 100%; text-align: center; margin-top: 3rem;">
     <button id="toggle-flipbook" class="read-issue-btn">Read This Issue</button>
