--- a/protohome.html
+++ b/protohome.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
-      background: #f2f8fa;
+      background: #e6e6e6;
       color: #222;
     }
     html {
@@ -104,7 +104,7 @@
       justify-content: center;
       gap: 3rem;
       padding: 6rem 2rem;
-      background: #f2f8fa;
+      background: #e6e6e6;
       flex-wrap: wrap;
     }
     .hero-text {
@@ -136,7 +136,7 @@
       padding: 6rem 2rem;
     }
     .card {
-      background: #f2f8fa;
+      background: #e6e6e6;
       border-radius: 12px;
       padding: 2rem;
       box-shadow: 0 4px 20px rgba(0,0,0,0.05);
@@ -162,7 +162,7 @@
     }
 
     footer {
-      background: #e2eff1;
+      background: #d9d9d9;
       padding: 5rem 2rem 3rem;
       color: #444;
       font-size: 0.9rem;
