--- a/protohome.html
+++ b/protohome.html
@@ -135,7 +135,7 @@
   gap: 2.5rem;
   padding: 6rem 2rem;
   background-color: #e6e6e6;
-  background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='40' height='40'><rect x='0' y='0' width='10' height='10' fill='%23ccc' /><rect x='30' y='30' width='10' height='10' fill='%23ccc' /></svg>");
+background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='80' height='80'><rect width='10' height='10' fill='%23333'/><rect x='20' y='10' width='10' height='10' fill='%230df6e3'/><rect x='40' y='20' width='10' height='10' fill='%23ff4ac2'/><rect x='60' y='30' width='10' height='10' fill='%230df6e3'/><rect x='30' y='50' width='10' height='10' fill='%23ff4ac2'/><rect x='50' y='60' width='10' height='10' fill='%230df6e3'/></svg>");
   background-repeat: repeat;
   background-attachment: fixed;
   border-top: 1px solid #ccc;
