--- a/protohome.html
+++ b/protohome.html
@@ -135,7 +135,7 @@
   gap: 2.5rem;
   padding: 6rem 2rem;
   background-color: #e6e6e6;
-background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='80' height='80'><rect width='10' height='10' fill='%23333'/><rect x='20' y='10' width='10' height='10' fill='%230df6e3'/><rect x='40' y='20' width='10' height='10' fill='%23ff4ac2'/><rect x='60' y='30' width='10' height='10' fill='%230df6e3'/><rect x='30' y='50' width='10' height='10' fill='%23ff4ac2'/><rect x='50' y='60' width='10' height='10' fill='%230df6e3'/></svg>");
+background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='60' height='60'><line x1='0' y1='30' x2='60' y2='30' stroke='%230df6e3' stroke-width='1'/><line x1='30' y1='0' x2='30' y2='60' stroke='%230df6e3' stroke-width='1'/><circle cx='30' cy='30' r='3' fill='%23ff4ac2'/></svg>");
   background-repeat: repeat;
   background-attachment: fixed;
   border-top: 1px solid #ccc;
