--- a/protohome.html
+++ b/protohome.html
@@ -135,7 +135,7 @@
   gap: 2.5rem;
   padding: 6rem 2rem;
   background-color: #e6e6e6;
-background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='60' height='60'><line x1='0' y1='30' x2='60' y2='30' stroke='%230df6e3' stroke-width='1'/><line x1='30' y1='0' x2='30' y2='60' stroke='%230df6e3' stroke-width='1'/><circle cx='30' cy='30' r='3' fill='%23ff4ac2'/></svg>");
+background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='20'><rect x='0' y='10' width='100' height='2' fill='%230df6e3' opacity='0.1'/></svg>");
   background-repeat: repeat;
   background-attachment: fixed;
   border-top: 1px solid #ccc;
