--- a/protohome.html
+++ b/protohome.html
@@ -135,7 +135,7 @@
   gap: 2.5rem;
   padding: 6rem 2rem;
   background-color: #e6e6e6;
-background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='20'><rect x='0' y='10' width='100' height='2' fill='%230df6e3' opacity='0.1'/></svg>");
+background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='80' height='80'><rect x='0' y='0' width='80' height='80' fill='black'/><rect x='10' y='10' width='5' height='5' fill='%23ff4ac2'/><rect x='25' y='20' width='5' height='5' fill='%230df6e3'/><rect x='40' y='10' width='5' height='5' fill='%23ff4ac2'/><rect x='55' y='30' width='5' height='5' fill='%230df6e3'/><rect x='20' y='50' width='5' height='5' fill='%23ff4ac2'/><rect x='65' y='60' width='5' height='5' fill='%230df6e3'/></svg>");
   background-repeat: repeat;
   background-attachment: fixed;
   border-top: 1px solid #ccc;
@@ -269,7 +269,7 @@ background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/200
     </a>
 
     <div class="hero-text" style="flex: 1; max-width: 700px; display: flex; flex-direction: column;">
-      <h1 class="gradient-heading">Issue 01 – October 2025</h1>
+      <h1 class="gradient-heading">The Latest Issue</h1>
 
       <div style="display: flex; flex-wrap: wrap; gap: 2rem; margin-top: 2rem;">
         <div style="flex: 1 1 300px;">
