--- a/protohome.html
+++ b/protohome.html
@@ -135,7 +135,7 @@
   gap: 2.5rem;
   padding: 6rem 2rem;
   background-color: #e6e6e6;
-background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='80' height='80'><rect x='0' y='0' width='80' height='80' fill='black'/><rect x='10' y='10' width='5' height='5' fill='%23ff4ac2'/><rect x='25' y='20' width='5' height='5' fill='%230df6e3'/><rect x='40' y='10' width='5' height='5' fill='%23ff4ac2'/><rect x='55' y='30' width='5' height='5' fill='%230df6e3'/><rect x='20' y='50' width='5' height='5' fill='%23ff4ac2'/><rect x='65' y='60' width='5' height='5' fill='%230df6e3'/></svg>");
+background-image: url("data:image/svg+xml,%3Csvg width='100' height='100' viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' stroke='%230df6e3' stroke-width='1'%3E%3Cpath d='M 0 0 L 100 0 M 0 50 L 100 50 M 0 100 L 100 100 M 0 0 L 0 100 M 50 0 L 50 100 M 100 0 L 100 100' /%3E%3Ccircle cx='50' cy='50' r='2' fill='%23ff4ac2' /%3E%3C/g%3E%3C/svg%3E");
   background-repeat: repeat;
   background-attachment: fixed;
   border-top: 1px solid #ccc;
